- PHP Version downgrade to 8.4 to support hosting deployment.
- System logs now are collapsed so they take less space.
- LogWorker prefix for each type of log.
- Template component now sanitazes file paths.
- AuthSlave::validateCSRF() now uses hash_equals() for improved security.
- Improved PDO Exception handling in DataSlave.
- Jquery is now loaded from local files.

#### Fixed
- Skeleton: Sites folder not accounted for deploy.sh and index.php
- Skeleton: .htaccess fallback not working.
- Skeleton: Sites folder not accounted for watch.sh
- NotFoundException and NotAuthorizedException are not being handled correctly.
- ValidationWorker is not initialized. (jesus christ)
- DataWorker::getOne() crashes when no result is found.
- AlreadyAuthorizedException is not being handled.
- Config::configureAuthorization(...) is not enabling global authorization correctly.
- CSRF token session is not being correctly injected into the main template.

#### Removed
- htmlspecialchars method from Request::sanitizeData().
- meta tag HTTP headers from main.php Template.
- API Response status string field.
- domain configuration from Config::configureAuthorization(...)

---

### [v0.2] - 2025-12-06
#### Added
- Configuration of path redirects for 404 error.
- Support for .html template injection before and after #main div.
- Server::preload(__DIR__) for loading environment configuration.
- Server::getConfiguration(), Server::getTemplate(), Server::getViewRouter(), Server::getApiRouter() for modular loading.
- Test suite added.
- Feature to enable authorization across parent domain and all subdomains.
- Bee::getBaseDomain() and Bee::getBuiltDomain(...) for getting base domain and subdomain.
- Bee::hashPassword(...) and AuthWorker::autologin(...) for automatic password hashing and auto-login.
- AuthWorker::getAuthorizedUserId() for getting authorized user ID.
- New methods and uses for SQL queries in DataWorker and DataSlave.
- Deploy script for Apache.

#### Changed